[tool.poetry]
name = "graphify"
version = "0.1.0"
description = ""
authors = ["raufer <raufer92@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
nxpd = "^0.2.0"
dictdiffer = "^0.8.1"
networkx = "^3.1"
customtkinter = ">=5.2"
pyvis = ">=0.3"
tkinterdnd2 = { version = ">=0.3", optional = true }

[tool.poetry.extras]
dnd = ["tkinterdnd2"]

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
hypothesis = "^6.82.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
